--- a/src/index.html
+++ b/src/index.html
@@ -51,11 +51,12 @@
             I thought it would be a great idea to build  <a href="https://trash.company" target="_blank">trash.company</a>.
         </p>
         <p class="mb-4">
-            Most of my projects living on <a href="https://git.new/henri" target="_blank" rel="noopener noreferrer">Github</a>, check it out if you want to see how it's build!
+            Most of my projects are living on <a href="https://git.new/henri" target="_blank" rel="noopener noreferrer">Github</a>, check it out if you want to see how it's build!
         </p>
         <div class="flex space-x-4">
+            <p>Links:</p>
             <a href="https://x.com/@createdbyhenri" class="text-blue-600 hover:underline">X/Twitter</a>
-            <a href="https://git.new/henri" class="text-blue-600 hover:underline">GitHub</a>
+            <a href="https://git.new/henri" class="text-blue-600 hover:underline">Github</a>
             <a href="mailto:hi@henri.is" class="text-blue-600 hover:underline">Email</a>
         </div>
     </div>
