--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Henri">
     <meta name="twitter:description" content="Hey, my name is Henri. I'm a 15 year old student from Germany, interested in tech, design and programming.">
-    <meta name="twitter:image" content="https://henri.is/avatar.ico">
+    <meta name="twitter:image" content="avatar.ico">
     <meta name="twitter:url" content="https://henri.is">
     <meta name="twitter:site" content="@createdbyhenri">
 </head>
